--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--数据库连接-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
